2010-07-16  Sergio Martin <sergio.martin@artica.es>

	* pandoradb_data.sql: Fixed the default data inserting the
	new colum of tgrupo "propagate"

2010-07-15  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/networkmap.php: fixed the pass to parameters between
	fullscreen and windowed mode.
	Fixes: #3013769

2010-07-15  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/reporting/reporting_builder.php: fixed lost name of report when
	delete any element of this element.
	Fixes: #3025352

2010-07-16  Raúl Mateos  <raulofpandora@gmail.com>

	* operation/incidents/incident.php: Put create button on the right.

2010-07-15  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/gis_maps/configure_gis_map.php: fixed typo in the tip.
	Fixes: #3029895

2010-07-15  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_html.php: added the function "print_select_groups" to
	print the field select box for groups with tree style.
	
	* include/functions_db.php: in function "get_user_groups" added test to
	false value in parameter $privilege for get all groups without ACL test.
	Fixed in function "get_user_groups_tree" the call to "get_user_groups" with
	the correct parameters.
	
	* operation/incidents/incident.php, operation/incidents/incident_detail.php,
	operation/events/events.php, operation/agentes/status_monitor.php,
	operation/agentes/estado_agente.php,
	operation/agentes/alerts_status.functions.php,
	operation/agentes/exportdata.php, operation/agentes/networkmap.php,
	operation/messages/message.php, general/ui/agents_list.php,
	godmode/groups/configure_group.php, godmode/groups/group_list.php,
	godmode/agentes/massive_add_alerts.php, 
	godmode/agentes/massive_delete_agents.php, 
	godmode/agentes/massive_config.php, 
	godmode/agentes/massive_delete_action_alerts.php, 
	godmode/agentes/massive_delete_alerts.php, 
	godmode/agentes/modificar_agente.php, 
	godmode/agentes/massive_delete_modules.php, 
	godmode/agentes/massive_add_action_alerts.php, 